再次优化api